--- a/SurveyForm/index.html
+++ b/SurveyForm/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="uft-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <title>My Page</title>
   </head>
   <body>
